# thebeat

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CITATION.cff  MANIFEST.in  README.md  conftest.py  core.py  examples.py  pyproject.toml  readthedocs.yml  requirements.txt  stimulus_examples.ipynb  tests.py
.binder/: requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  packaging.yml
Stimulus/: sequence.py  sound_sequence.py
combio/: __init__.py  _decorators.py  _helpers.py  _warnings.py  linguistic.py  melody.py  rhythm.py  rhythm_helpers.py  rhythm_trial.py  scratch.py  stats.py  visualization.py
combio/core/: __init__.py  _helpers.py  helpers.py  sequence.py  stimsequence.py  stimtrial.py  stimulus.py
combio/linguistic/: __init__.py  stress_patterns.py
combio/rhythm/: __init__.py  helpers.py  rhythm.py  rhythmtrial.py
combio/stats/: __init__.py  helpers.py  ioi_stats.py  ks.py  ugof.py  within_pattern.py  within_sequence.py
combio/visualization/: __init__.py  plot_sequence.py  recurrence_plot.py  timelines.py
docs/: requirements.txt
docs/source/: api.rst  bibliography.rst  combio.core.rst  combio.rst  conf.py  core.rst  gettingstarted.ipynb  index.rst  installation.rst  modules.rst  references.rst  refs.bib
docs/source/_static/: custom.css
docs/source/api_reference/: core.rst  extras.rst  index.rst  linguistics.rst  stats.rst  visualization.rst
docs/source/api_reference/core/: SoundSequence.rst
docs/source/api_reference/music/: Melody.rst
docs/source/examples/: README.md  basics.rst  creating_stimuli.rst  index.rst  snippets.rst  tipstricks.rst  usecases.rst
docs/source/examples/basics/: combining_repeating.ipynb  manipulate_plots.ipynb  warnings.ipynb
docs/source/examples/creating_stimuli/: bianco.ipynb  bosker.ipynb  repplondonkeller.ipynb
docs/source/examples/snippets/: IDcallR_SpermWhaleCodas.csv  ITIs.ipynb  autocorrelation.ipynb  combining_repeating.ipynb  export_ioi_df.ipynb  fft.ipynb  hersh_spermwhales_2008.csv  manipulate_plots.ipynb  plot_multiple_sequences.ipynb  plot_phase_differences.ipynb  plot_single_sequence.ipynb  random_sequences.csv  recurrence_plots_with_colorbar.ipynb  sampjit_sampledata.csv  sperm_whale_codas.ipynb  warnings.ipynb
docs/source/examples/snippets/.ipynb_checkpoints/: plot_multiple_sequences-checkpoint.ipynb
docs/source/examples/tipstricks/: combining_repeating.ipynb  manipulate_plots.ipynb  multichannel_wav.ipynb  warnings.ipynb
docs/source/examples/usecases/: Oddball.ipynb  bianco.ipynb  bosker.ipynb  polyrhythms_scratch.ipynb  repp_23_170ms.eps  repplondonkeller.ipynb
docs/source/illustrations_illustrator_files/: gettingstarted_0_dark.ai  gettingstarted_0_light.ai  gettingstarted_1.ai
docs/source/lookuptable/: data_analysis.csv  data_visualization.csv  index.rst  stimulus_generation.csv
docs/source/package/: core.rst  extras.rst  index.rst  linguistics.rst  music.rst  rhythm.rst  rhythms_and_melodies.rst  stats.rst  summary.rst  visualization.rst
docs/source/package/core/: BaseSequence.rst  Sequence.rst  SoundSequence.rst  SoundStimulus.rst  StimSequence.rst  Stimulus.rst
docs/source/package/extras/: helpers.rst  utilities.rst
docs/source/package/music/: Rhythm.rst
docs/source/package/rhythms_and_melodies/: Melody.rst  Rhythm.rst
examples/: for presentation.py  rhythm_random_plot.py  stim_isoc_trial.py
stimulus/: __init__.py  base.py  gen_rhythm.py  lilypond_tests.py  lilypond_tests.py_  melodic.py  metrical.py  musical.py  rhythm.py  rhythmic.py  stimulus_sequence.py  tests.py
stimulus/examples/: drum.py  for presentation.py  plot_rhythm.py  rhythm_drumbeat.py  rhythm_random_plot.py  stim_anisoc_trial.py  stim_isoc_trial.py  stim_metrical_trial.py
tests/: conftest.py  requirements.txt  scratch.py  test_helpers.py  test_lilypond.py  test_linguistic.py  test_melody.py  test_rhythm.py  test_rhythmtrial.py  test_sequence.py  test_sequence_generation.py  test_soundsequence.py  test_soundstimulus.py  test_stats.py  test_stimsequence.py  test_stimtrial.py  test_stimulus.py  test_utils.py  test_visualization.py
tests/examples/: beat_finding.py
thebeat/: __init__.py  _decorators.py  _helpers.py  _warnings.py  fft.py  helpers.py  linguistic.py  melody.py  music.py  rhythm.py  stats.py  utils.py  visualization.py
thebeat/core/: __init__.py  sequence.py  soundsequence.py  soundstimulus.py  stimsequence.py  stimulus.py
