[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "thebeat"
description = "Python package for working with rhythms and other temporal sequences in science"
license = { text = " GPL-3.0-or-later" }
authors = [
    {name = "Jelle van der Werff", email="jellevanderwerff@gmail.com"},
    {name = "Yannick Jadoul", email="yannick.jadoul@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.8"
keywords = []  # TODO
#license = {text = "BSD 3-Clause License"}  # TODO
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "sounddevice",
    "pandas",
    "levenshtein"
]
dynamic = ["version"]

[project.urls]
#homepage = ""  # TODO: GitHub or Docs?
repository = "https://github.com/Jellevanderwerff/thebeat"
#documentation = ""  # TODO: RTD
#changelog = ""  # TODO

[tool.setuptools]
packages = [
    "thebeat",
    "thebeat.core",
    "thebeat.resources"
]

[tool.setuptools.dynamic]
version = {attr = "thebeat.__version__"}

[tool.pytest.ini_options]
minversion = "6.0"
filterwarnings = [
    "error",
    "ignore:imghdr:DeprecationWarning"
]

[tool.flake8]
max-line-length = 160
max-doc-length = 100
extend-ignore = [
    'W505',
]
per-file-ignores = [
    "__init__.py:F401",
    "docs/source/conf.py:E402,E265",
    "scripts/*:D100,D103",
    "tests/*:D100,D103",
]

[tool.isort]
skip = ["docs/source/conf.py"]
line_length = 160
multi_line_output = 3


[tool.mypy]
ignore_missing_imports = true
