[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "thebeat"
description = "Python package for working with rhythms and other temporal sequences in science"
license = { text = "GNU General Public License v3 or later (GPLv3+)" }
authors = [
    {name = "Jelle van der Werff", email = "jellevanderwerff@gmail.com"},
    {name = "Yannick Jadoul", email = "yannick.jadoul@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.8"
keywords = ["music", "rhythm", "timing", "cognitive science"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "sounddevice",
    "pandas",
    "levenshtein"
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://thebeat.readthedocs.io/"
"Documentation" = "https://thebeat.readthedocs.io/"
"Changelog" = "https://github.com/Jellevanderwerff/thebeat/releases"
"Bug Tracker" = "https://github.com/Jellevanderwerff/thebeat/issues"
"Source Code" = "https://github.com/Jellevanderwerff/thebeat"

[project.optional-dependencies]
music_notation = [
    "abjad ; python_version > '3.9'",
    "abjad<=3.4 ; python_version <= '3.9'",
    "lilypond; sys_platform != 'darwin' or platform_machine != 'arm64'"
]

[tool.setuptools]
packages = [
    "thebeat",
    "thebeat.core",
    "thebeat.resources"
]

[tool.setuptools_scm]
write_to = "thebeat/_version.py"

[tool.check-manifest]
ignore = [
    "thebeat/_version.py",
    ".binder/*"
]

[tool.pytest.ini_options]
minversion = "6.0"
filterwarnings = [
    "error",
    "ignore:'imghdr' is deprecated:DeprecationWarning"
]

[tool.flake8]
max-line-length = 160
max-doc-length = 100
extend-ignore = [
    "W505",
]
per-file-ignores = [
    "__init__.py:F401",
    "docs/source/conf.py:E402,E265",
    "scripts/*:D100,D103",
    "tests/*:D100,D103",
]

[tool.isort]
skip = ["docs/source/conf.py"]
line_length = 160
multi_line_output = 3


[tool.mypy]
ignore_missing_imports = true
